--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 plugins:
   - jekyll-paginate
 
-title: Sweet 16
+title: Sohee Kim
 description:
     <a href="https://wordpress.org/themes/twentysixteen/" rel="external">Wordpress 2016 theme</a>
     in <a href="https://jekyllrb.com/" rel="external">Jekyll</a>
